5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1723_2505.log
== TEST (2019-05-09 11:51:04) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

e = 1
i = 1
while(i < k):
	soma = soma + ((x**1)/factorial(i))
	i = i + 2
	e = e + 2
print(round(soma,10)
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:51:16) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

e = 1
i = 1
while(i < k):
	soma = soma + ((x**1)/factorial(i))
	i = i + 2
	e = e + 2
print(round(soma,10)
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:51:21) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

e = 1
i = 1
while(i < k):
	soma = soma + ((x**1)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10)
-- ERROR:
File "XXXX", line 15
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:51:29) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

e = 1
i = 1
while(i < k):
	soma = soma + ((x**1)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + ((x**1)/factorial(i))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:52:03) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 1
e = 1
i = 1

while(i < k):
	soma = soma + ((x**1)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- OUTPUT:
1.0319848291
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:52:29) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 1
e = 1
i = 1

while(i < k):
	soma = soma + ((x**e)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- OUTPUT:
1.0274190021
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:53:56) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 1
e = 1
i = 1

while(i < k):
	soma = ((x**e)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- OUTPUT:
3.4343e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:54:10) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 1
e = 1
i = 1

while(i < k):
	soma = ((x**e)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- EXECUTION TIME:
0.184142
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
3.4343e-06
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-3.4343e-06
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0182770452
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:17:51) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 1
e = 1
i = 1

while(i < k):
	soma = ((x**e)/factorial(i))
	i = i + 2
	e = e + 2

	
print(round(soma,10))
-- OUTPUT:
0.6459640975
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:21:57) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 1
e = 1
i = 1
s = 1
s1 = 1 

while(s1 < k):
	soma = ((x**e)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
-0.0046817541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:23:02) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 1
e = 1
i = 1
s = 1
s1 = 1 

while(s1 < k):
	soma = ((x**e)/factorial(i))*s
	sen = sin(soma)
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
-0.0046817541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:25:31) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
e = 1
i = 1
s = 1
s1 = 1 

while(s1 < k):
	soma = soma + ((x**e)/factorial(i))*s
	sen = sin(soma)
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
0.9998431014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:26:22) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
e = 1
i = 1
s = 1
s1 = 1 

while(s1 < k):
	soma = soma + ((x**e)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
0.9998431014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:26:27) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
e = 1
i = 1
s = 1
s1 = 1 

while(s1 < k):
	soma = soma + ((x**e)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
0.9998431014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:27:12) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
e = 0
i = 0
s = 1
s1 = 1 

while(s1 < k):
	soma = soma + ((x**e)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
-0.000894523
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:27:35) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
e = 0
i = 0
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**e)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	e = e + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
2.47373e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:29:15) 
-- CODE:
from math import*

x = eval(input("sen:"))
k = int(input("termos:"))

soma = 0
i = 0
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
2.47373e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:29:36) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 0
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	
print(round(soma,10))
-- OUTPUT:
0.9996242169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:32:41) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 0
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	
print(round(soma,10))
-- EXECUTION TIME:
0.155195
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.9996242169
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
0.9996242169
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.9998329795
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:27) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 0
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.8412678889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:34:40) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.0274087007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:34:59) 
-- CODE:
from math import*

x = radians(eval(input("sen:")))
k = int(input("termos:"))

soma = 1
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.8559638376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:35:16) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 1
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.9092959526
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:35:28) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.8414728989
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:36:55) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- EXECUTION TIME:
0.131223
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.8414728989
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.8413862018
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.761934798
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:37:32) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 <= k):
	soma = soma + ((x**i)/factorial(i))*s
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.8414709544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:41:46) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = -1 * s 
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:42:18) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 1
s1 = 0

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 2
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
-0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:42:46) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 2
s1 = 0

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 2
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:43:45) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 0
s1 = 0

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 2
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.7448415956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:44:57) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 2
s1 = 0

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 1
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(son,10))
-- OUTPUT:
0.8414728989
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:48:08) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 2  
s1 = 0 #termos

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 1
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(soma,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:48:26) 
-- CODE:
from math import*

x = (eval(input("sen:")))
k = int(input("termos:"))

soma = 0
i = 1
s = 2  
s1 = 0 #termos

while(s1 < k):
	soma = soma + (((x**i)/factorial(i))* (-1)**s)
	s = s + 1
	i = i + 2
	s1 = s1 +1
	son = sin(soma)
print(round(soma,10))
-- EXECUTION TIME:
0.19431
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
